# lazy-paper

./: .dockerignore  .env.example  .env.example.v14-additions  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pdffigures2  HANDOFF.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md  Table of Contents-CV-IMRaD.docx  Table of Contents-Relaxor AFE-ZGY-HW.docx  cli.py  conftest.py  docker-compose.yml  lazy-paper Demo.html  pyproject.toml
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  KNOWLEDGE_BASE.md  PPT_KNOWN_ISSUES.md  STYLE_SPEC.md  TEMPLATE_AUTHORING.md  TEST_FRAMEWORK.md  USER_GUIDE.md  WALKTHROUGH_meng2024.md  v1_10_variant_comparison.md  v1_3_layout_plan.md  v1_3_x_bug_report.md  v1_4_content_roadmap.md  v1_4_roadmap.md  v1_5_experimental_results.md  v1_6_strategy_j_design.md  v1_7_validation_results.md  v1_8_2_corpus_validation.md  v1_8_3_corpus_validation.md  v1_8_validation_results.md  v1_9_1_variance_check.md
docs/INTERNAL/: HANDOFF.md  README.md  audit_subagent_template.md
docs/archive/: v1_10_external_reference.md  v1_10_variant_comparison.md  v1_12_phase1_ragas_baseline.md  v1_12_phase1_summary.md  v1_12_phase2_summary.md  v1_12_phase3_summary.md  v1_12_phase4_summary.md  v1_5_test_cases.md  v1_7_validation_results.md  v1_9_2_20_paper_validation.md  v1_9_validation_results.md
docs_zh/: AGENT_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  KNOWLEDGE_BASE.md  README.md  TEMPLATE_AUTHORING.md  TEST_FRAMEWORK.md  USER_GUIDE.md  v1_7_validation_results.md  v1_8_2_corpus_validation.md  v1_9_2_20_paper_validation.md  v1_9_validation_results.md
docs_zh/INTERNAL/: HANDOFF.md
docs_zh/archive/: v1_8_validation_results.md  v1_9_1_variance_check.md
examples/: README.md
examples/2403.20001-energy-regularization-rl/: README.md  preview.docx  preview.html  preview.pptx
examples/2605.13058-mujica-multiskill/: README.md  preview.docx  preview.html  preview.pptx
examples/prx-2015-nonreciprocal-md/: README.md  preview.docx  preview.html
frontend/garden/: DATA_ADAPTER.md  garden-app.js  garden-data.js  garden-hud.js  garden-render.js  garden-tweaks.jsx  garden.html
input/: hif_metadata.yaml
llm/: advise.py  client.py  experiment.py  garden.py  library.py  models.yaml  paper_kg.py  retriever.py  synthesize.py  template_author.py
llm/citation/: __init__.py  models.py  stream_processor.py
llm/prompts/: advise.md  entity_dedup.md  exp_curve.md  figure_analyze.md  paper_context.md  paper_kg.md  paper_kg_v2.md  paper_kg_v3.md  pptx_outline.md  pptx_paper_summary.md  pptx_summarize.md  prompt_tailor.md  section_compose.md  synthesize.md  template_author.md
scripts/: aggregate_comparison.py  aggregate_m4.py  audit_grep.py  audit_pptx.py  collect_variant_metrics.py  evaluate.py  fetch_katex.py  github-metadata.sh  pdffigures2_sidecar.py  recheck_baseline.py  run_variant_matrix.sh
scripts/tests/: test_pdffigures2_sidecar.py
stages/: _common.py
stages/_common/: __init__.py  bbox.py  done.py  images.py  normalize.py  paths.py  yaml_io.py
stages/s01_ocr/: mineru.py  runner.py
stages/s02_clean/: runner.py
stages/s03_chapter/: runner.py
stages/s04_figures/: runner.py
stages/s05_template/: runner.py
templates/: Table of Contents-ATEC-B2w-MUJICA-v2-ZGY.docx  Table of Contents-ATEC-B2w-Reward-ZGY.docx
tests/: conftest.py  test_advise.py  test_citation.py  test_cli.py  test_cli_retry_failed.py  test_collect_variant_metrics.py  test_common.py  test_evaluate_harness.py  test_experiment.py  test_garden.py  test_library.py  test_llm_client.py  test_llm_smoke.py  test_paper_kg.py  test_retriever.py  test_synthesize.py  test_template_author.py
(+99 files in other folders)
