[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-paper"
version = "1.11.5"
description = "Turn a PDF research paper into a structured, multi-format (DOCX/PDF/HTML/PPTX) bilingual deep analysis."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "thematteroftime" }]
requires-python = ">=3.11"
keywords = ["pdf", "ocr", "llm", "scientific-papers", "powerpoint", "pptx", "docx", "weasyprint", "deepseek", "qwen-vl", "mineru", "research-tool", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business",
]
dependencies = [
    "requests>=2.31.0",
    "pdfplumber>=0.11",
    "pypdfium2>=4",
    "python-docx>=1.1",
    "openai>=1.50",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "Pillow>=10",
    "jinja2>=3.1",
    "weasyprint>=62",
    "python-pptx>=0.6.23",
    # v1.4: PaperDB + agent + reviewer
    "llama-index-core>=0.11,<0.13",
    "llama-index-retrievers-bm25>=0.4",
    "bm25s>=0.2",
    "instructor>=1.5",
    "pydantic-ai-slim[openai]>=1.0,<2",
    "pyarrow>=15",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/thematteroftime/lazy-paper"
Repository = "https://github.com/thematteroftime/lazy-paper"
Changelog = "https://github.com/thematteroftime/lazy-paper/blob/main/CHANGELOG.md"
Issues = "https://github.com/thematteroftime/lazy-paper/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lazy-paper = "cli:main"

[tool.setuptools]
packages = [
    "stages",
    "stages._common",
    "stages.s01_ocr",
    "stages.s02_clean",
    "stages.s03_chapter",
    "stages.s04_figures",
    "stages.s05_template",
    "stages.s06_context",
    "stages.s07_figure_analyze",
    "stages.s08_section_compose",
    "stages.s09_render",
    "stages.s09_render.renderers",
    "llm",
    "llm.citation",
]

[tool.setuptools.package-data]
"stages.s09_render" = ["templates/*.html.j2", "templates/*.css"]

[tool.pytest.ini_options]
markers = [
    "live: tests that call real LLM/OCR APIs (skipped by default; run via -m live)",
]
addopts = "-m 'not live'"
